modified:   package.json 	modified:   solotto.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solana-lottery-switchboard",
+  "name": "solotto",
   "version": "1.0.0",
   "description": "Solana lottery client",
   "type": "module",
