--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bs58": "^6.0.0",
     "buffer-layout": "^1.2.2",
     "dotenv": "^17.2.3",
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "node-telegram-bot-api": "^0.67.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
