--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solotto",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Solana lottery client",
   "type": "module",
   "types": "./solotto.d.ts",
@@ -21,7 +21,8 @@
     "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
     "buffer-layout": "^1.2.2",
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "@bonfida/spl-name-service": "^3.0.19"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
